--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -61,7 +61,7 @@ executable backend
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: API Server
+    other-modules: API Server Database
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -72,6 +72,8 @@ executable backend
                     , servant-server
                     , wai
                     , warp
+                    , postgresql-simple
+                    , bytestring
 
 
 
