--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -74,7 +74,10 @@ executable backend
                     , warp
                     , postgresql-simple
                     , bytestring
-
+                    , persistent
+                    , persistent-postgresql
+                    , monad-logger
+                    , dotenv
 
 
     -- Directories containing source files.
