Add endpoints for getting items and storing the list with placeholder values.

--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -78,6 +78,8 @@ executable backend
                     , persistent-postgresql
                     , monad-logger
                     , dotenv
+                    , aeson
+ 
 
 
     -- Directories containing source files.
